add method genRndPos in Map